# linkedinDuck

./: .gitignore  README.md
backend/: .env.example  README.md  config.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/schemas/: health.py
backend/helpers/: oai_llm.py
backend/tests/: test_health.py
frontend/: package-lock.json
